--- a/st-dotnet/wwwroot/css/site.css
+++ b/st-dotnet/wwwroot/css/site.css
@@ -17,3 +17,16 @@ body {
   margin-bottom: 60px;
 }
 
+
+.flex-container {
+    display: flex;
+}
+
+.sidebar-container {
+    width: 20%;
+}
+
+.content-container {
+    width: 80%;
+    margin: auto;
+}
