[add] Channels list and create

--- a/st-dotnet/Views/Shared/_SideBar.cshtml
+++ b/st-dotnet/Views/Shared/_SideBar.cshtml
@@ -35,7 +35,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="route('categories.create')">
+                    <a asp-controller="Category" asp-action="Create">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Create Category
                     </a>
@@ -44,13 +44,13 @@
                 <li class="app-sidebar__heading">Channels</li>
 
                 <li>
-                    <a href="route('channels.index')">
+                    <a asp-controller="Channel" asp-action="Index">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Channels
                     </a>
                 </li>
                 <li>
-                    <a href=" route('channels.create') ">
+                    <a asp-controller="Channel" asp-action="Create">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Create Channel
                     </a>
