[add] Comment list, create and delete

--- a/st-dotnet/Views/Shared/_SideBar.cshtml
+++ b/st-dotnet/Views/Shared/_SideBar.cshtml
@@ -59,7 +59,7 @@
                 <li class="app-sidebar__heading">Comments</li>
 
                 <li>
-                    <a href=" route('comments.index') ">
+                    <a asp-controller="Comment" asp-action="Index">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Comments
                     </a>
