--- a/st-dotnet/Views/Shared/_SideBar.cshtml
+++ b/st-dotnet/Views/Shared/_SideBar.cshtml
@@ -11,19 +11,10 @@
                 <li class="app-sidebar__heading">Dashboard</li>
 
                 <li>
-                    <a href="">
+                    <a asp-controller="Home" asp-action="Index">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Home
                     </a>
-                </li>
-                <li>
-                    <a href="route('logout')"
-                       onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
-                        <i class="metismenu-icon pe-7s-rocket"></i>
-                        __('Logout')
-                    </a>
-                    <form id="logout-form" action="route('logout')" method="POST" class="d-none">
-                    </form>
                 </li>
 
                 <li class="app-sidebar__heading">Categories</li>
