[add] Channels edit/delete and comments delete

--- a/st-dotnet/Views/Category/Index.cshtml
+++ b/st-dotnet/Views/Category/Index.cshtml
@@ -8,6 +8,7 @@
 <h1>Categories</h1>
 
 <div class="table-responsive">
+    <div id="status"></div>
     <table id="categories-table" class="mb-0 table">
         <thead>
             <tr>
@@ -20,7 +21,7 @@
             </tr>
         </thead>
         <tbody>
-            
+
             @foreach (var category in Model.Categories)
             {
                 <tr>
@@ -35,7 +36,7 @@
                     </td>
                 </tr>
             }
-            
+
 
         </tbody>
     </table>
@@ -54,8 +55,6 @@
             window.location.href = window.location.origin + "/category/edit/" + id;
         }
 
-        // TODO Fix delete
-
         function del(id) {
             $.ajax({
                 type: "DELETE",
@@ -70,7 +69,7 @@
 
                     $('#status').append(`
                                     <div class="alert alert-success alert-dismissible fade show" role="alert">
-                                        <strong>Success!</strong> Category updated
+                                        <strong>Success!</strong> Category deleted
                                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
