--- a/st-dotnet/Views/Comment/Index.cshtml
+++ b/st-dotnet/Views/Comment/Index.cshtml
@@ -7,6 +7,7 @@
 @model CommentViewModel
 
 <div class="table-responsive">
+    <div id="status"></div>
     <table id="comments-table" class="mb-0 table">
         <thead>
             <tr>
@@ -29,6 +30,9 @@
                     <td>@comment.Text</td>
                     <td>@comment.Id</td>
                     <td>@comment.Id</td>
+                    <td>
+                        <button class="btn btn-danger btn-delete" onclick="del(@comment.Id)">Delete</button>
+                    </td>
                 </tr>
             }
 
@@ -36,8 +40,47 @@
     </table>
 </div>
 
-<script>$(document).ready(function() {
+<script>
+    $(document).ready(function () {
         $('#comments-table').DataTable({
             "paging": true
-        } );
-    } );</script>
+        });
+    });
+
+    function del(id) {
+        $.ajax({
+            type: "DELETE",
+            url: window.location.origin + "/api/comment/" + id,
+            data: { "id": id },
+            contentType: false,
+            processData: false,
+            success: function (msg) {
+                console.log(msg);
+
+                // Success alert
+
+                $('#status').append(`
+                                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                            <strong>Success!</strong> Comment deleted
+                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>`);
+            },
+            error: function (xhr, ajaxOptions, thrownError) {
+                console.log(xhr.responseText);
+
+                var json = JSON.parse(xhr.responseText)
+                // Error alert
+
+                $('#status').append(`
+                                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                            <strong>Error!</strong> ` + json.message + `
+                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>`);
+            }
+        });
+    };
+</script>
