[add] Channel types pages

--- a/st-dotnet/Views/Shared/_SideBar.cshtml
+++ b/st-dotnet/Views/Shared/_SideBar.cshtml
@@ -56,6 +56,21 @@
                     </a>
                 </li>
 
+                <li class="app-sidebar__heading">Channel Types</li>
+
+                <li>
+                    <a asp-controller="ChannelType" asp-action="Index">
+                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        Channel types
+                    </a>
+                </li>
+                <li>
+                    <a asp-controller="ChannelType" asp-action="Create">
+                        <i class="metismenu-icon pe-7s-rocket"></i>
+                        Create Channel type
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
