--- a/st-dotnet/Views/Channel/Index.cshtml
+++ b/st-dotnet/Views/Channel/Index.cshtml
@@ -14,6 +14,8 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Image</th>
+                <th>Type</th>
+                <th>Content</th>
                 <th>Created</th>
                 <th>Updated</th>
 
@@ -26,6 +28,8 @@
                     <th scope="row">@channel.Id</th>
                     <td>@channel.Name</td>
                     <td>@channel.Image</td>
+                    <td>@channel.ChannelTypeId</td>
+                    <td>@channel.Content</td>
                     <td>@channel.Id</td>
                     <td>@channel.Id</td>
                     <td>
