[add] Timestamps and deploy fixes

--- a/st-dotnet/Views/Channel/Index.cshtml
+++ b/st-dotnet/Views/Channel/Index.cshtml
@@ -30,8 +30,8 @@
                     <td>@channel.Image</td>
                     <td>@channel.ChannelTypeId</td>
                     <td>@channel.Content</td>
-                    <td>@channel.Id</td>
-                    <td>@channel.Id</td>
+                    <td>@channel.CreatedAt</td>
+                    <td>@channel.UpdatedAt</td>
                     <td>
                         <button class="btn btn-info btn-edit" onclick="edit(@channel.Id)">Edit</button>
                         <button class="btn btn-danger btn-delete" onclick="del(@channel.Id)">Delete</button>
