--- a/st-dotnet/Views/Comment/Index.cshtml
+++ b/st-dotnet/Views/Comment/Index.cshtml
@@ -28,8 +28,8 @@
                     <td>@comment.ChannelId</td>
                     <td>@comment.Author</td>
                     <td>@comment.Text</td>
-                    <td>@comment.Id</td>
-                    <td>@comment.Id</td>
+                    <td>@comment.CreatedAt</td>
+                    <td>@comment.UpdatedAt</td>
                     <td>
                         <button class="btn btn-danger btn-delete" onclick="del(@comment.Id)">Delete</button>
                     </td>
