--- a/st-dotnet/Views/Category/Index.cshtml
+++ b/st-dotnet/Views/Category/Index.cshtml
@@ -28,8 +28,8 @@
                     <th scope="row">@category.Id</th>
                     <td>@category.Name</td>
                     <td>@category.Image</td>
-                    <td>@category.Id</td>
-                    <td>@category.Id</td>
+                    <td>@category.CreatedAt</td>
+                    <td>@category.UpdatedAt</td>
                     <td>
                         <button class="btn btn-info btn-edit" onclick="edit(@category.Id)">Edit</button>
                         <button class="btn btn-danger btn-delete" onclick="del(@category.Id)">Delete</button>
