--- a/st-dotnet/Views/ChannelType/Index.cshtml
+++ b/st-dotnet/Views/ChannelType/Index.cshtml
@@ -24,8 +24,8 @@
                 <tr>
                     <th scope="row">@channelType.Id</th>
                     <td>@channelType.Name</td>
-                    <td>@channelType.Id</td>
-                    <td>@channelType.Id</td>
+                    <td>@channelType.CreatedAt>
+                    <td>@channelType.UpdatedAt</td>
                     <td>
                         <button class="btn btn-info btn-edit" onclick="edit(@channelType.Id)">Edit</button>
                         <button class="btn btn-danger btn-delete" onclick="del(@channelType.Id)">Delete</button>
