[fix] Migrate to mysql

--- a/st-dotnet/Views/Home/Index.cshtml
+++ b/st-dotnet/Views/Home/Index.cshtml
@@ -1,9 +1,19 @@
 @{
     ViewData["Title"] = "Home Page";
+    Layout = "../Shared/_Layout";
 }
 
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4"><b>Welcome!!</b></h1>
+    @if (!SignInManager.IsSignedIn(User))
+    {
+        <h2>Please <a id="login" asp-area="Identity" asp-page="/Account/Login">Login</a></h2>
+        <h2>Registering is disabled</h2>
+    }
 </div>
 
