--- a/st-dotnet/Views/Shared/_Layout.cshtml
+++ b/st-dotnet/Views/Shared/_Layout.cshtml
@@ -1,3 +1,9 @@
+@using Microsoft.AspNetCore.Identity
+
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +27,7 @@
     <div id="app">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">st_dotnet</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">st-dotnet</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,12 +37,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
-                    <partial name="_LoginPartial" />
 
+                    
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
@@ -46,12 +50,15 @@
 
         <main class="py-4">
             <div class="flex-container">
+                @if (SignInManager.IsSignedIn(User))
+                {
                 <partial name="_SideBar" />
+                }
 
                 <div class="content-container">
                     @RenderBody()
                 </div>
-            </div>
+                </div>
 
         </main>
     </div>
